src/MyLanguageParser.py
# Generated from MyLanguage.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyLanguageParser ( Parser ):

    grammarFileName = "MyLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'int'", "'double'", 
                     "'boolean'", "'void'", "'{'", "'}'", "'if'", "'else'", 
                     "';'", "'='", "'++'", "'--'", "'return'", "'loop'", 
                     "'do-loop'", "'until'", "'for-loop'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'!'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "INTEGER", "DOUBLE", "STRING", "WS" ]

    RULE_program = 0
    RULE_function_list = 1
    RULE_function_def = 2
    RULE_arguments = 3
    RULE_argument = 4
    RULE_type = 5
    RULE_block = 6
    RULE_statement_list = 7
    RULE_statement = 8
    RULE_conditionWithElse = 9
    RULE_conditionNoElse = 10
    RULE_loop_stmt = 11
    RULE_init_stmt = 12
    RULE_post_stmt = 13
    RULE_var_list = 14
    RULE_var = 15
    RULE_expression = 16
    RULE_logicalOrExpression = 17
    RULE_logicalAndExpression = 18
    RULE_equalityExpression = 19
    RULE_relationalExpression = 20
    RULE_additiveExpression = 21
    RULE_multiplicativeExpression = 22
    RULE_unaryExpression = 23
    RULE_primaryExpression = 24
    RULE_number = 25
    RULE_parameters = 26
    RULE_empty = 27

    ruleNames =  [ "program", "function_list", "function_def", "arguments", 
                   "argument", "type", "block", "statement_list", "statement", 
                   "conditionWithElse", "conditionNoElse", "loop_stmt", 
                   "init_stmt", "post_stmt", "var_list", "var", "expression", 
                   "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "number", "parameters", 
                   "empty" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    IDENTIFIER=36
    INTEGER=37
    DOUBLE=38
    STRING=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_list(self):
            return self.getTypedRuleContext(MyLanguageParser.Function_listContext,0)


        def EOF(self):
            return self.getToken(MyLanguageParser.EOF, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MyLanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.function_list()
            self.state = 57
            self.match(MyLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_def(self):
            return self.getTypedRuleContext(MyLanguageParser.Function_defContext,0)


        def function_list(self):
            return self.getTypedRuleContext(MyLanguageParser.Function_listContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_function_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_list" ):
                listener.enterFunction_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_list" ):
                listener.exitFunction_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_list" ):
                return visitor.visitFunction_list(self)
            else:
                return visitor.visitChildren(self)




    def function_list(self):

        localctx = MyLanguageParser.Function_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_list)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.function_def()
                self.state = 60
                self.function_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.function_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MyLanguageParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(MyLanguageParser.IDENTIFIER, 0)

        def block(self):
            return self.getTypedRuleContext(MyLanguageParser.BlockContext,0)


        def arguments(self):
            return self.getTypedRuleContext(MyLanguageParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_def" ):
                return visitor.visitFunction_def(self)
            else:
                return visitor.visitChildren(self)




    def function_def(self):

        localctx = MyLanguageParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_def)
        self._la = 0 # Token type
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.type_()
                self.state = 66
                self.match(MyLanguageParser.IDENTIFIER)
                self.state = 67
                self.match(MyLanguageParser.T__0)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0):
                    self.state = 68
                    self.arguments()


                self.state = 71
                self.match(MyLanguageParser.T__1)
                self.state = 72
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.type_()
                self.state = 75
                self.match(MyLanguageParser.IDENTIFIER)
                self.state = 76
                self.match(MyLanguageParser.T__0)
                self.state = 77
                self.match(MyLanguageParser.T__1)
                self.state = 78
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.ArgumentContext,i)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = MyLanguageParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.argument()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 83
                self.match(MyLanguageParser.T__2)
                self.state = 84
                self.argument()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MyLanguageParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(MyLanguageParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = MyLanguageParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.type_()
            self.state = 91
            self.match(MyLanguageParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLanguageParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MyLanguageParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(MyLanguageParser.Statement_listContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MyLanguageParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MyLanguageParser.T__7)
            self.state = 96
            self.statement_list()
            self.state = 97
            self.match(MyLanguageParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MyLanguageParser.StatementContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(MyLanguageParser.Statement_listContext,0)


        def empty(self):
            return self.getTypedRuleContext(MyLanguageParser.EmptyContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = MyLanguageParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement_list)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 5, 6, 7, 8, 10, 12, 16, 17, 18, 20, 30, 33, 34, 35, 36, 37, 38, 39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.statement()
                self.state = 100
                self.statement_list()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.empty()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionWithElse(self):
            return self.getTypedRuleContext(MyLanguageParser.ConditionWithElseContext,0)


        def conditionNoElse(self):
            return self.getTypedRuleContext(MyLanguageParser.ConditionNoElseContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MyLanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.conditionWithElse()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.conditionNoElse()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionWithElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MyLanguageParser.ExpressionContext,0)


        def conditionWithElse(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.ConditionWithElseContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.ConditionWithElseContext,i)


        def block(self):
            return self.getTypedRuleContext(MyLanguageParser.BlockContext,0)


        def type_(self):
            return self.getTypedRuleContext(MyLanguageParser.TypeContext,0)


        def var_list(self):
            return self.getTypedRuleContext(MyLanguageParser.Var_listContext,0)


        def IDENTIFIER(self):
            return self.getToken(MyLanguageParser.IDENTIFIER, 0)

        def loop_stmt(self):
            return self.getTypedRuleContext(MyLanguageParser.Loop_stmtContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_conditionWithElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionWithElse" ):
                listener.enterConditionWithElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionWithElse" ):
                listener.exitConditionWithElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionWithElse" ):
                return visitor.visitConditionWithElse(self)
            else:
                return visitor.visitChildren(self)




    def conditionWithElse(self):

        localctx = MyLanguageParser.ConditionWithElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_conditionWithElse)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(MyLanguageParser.T__9)
                self.state = 110
                self.match(MyLanguageParser.T__0)
                self.state = 111
                self.expression()
                self.state = 112
                self.match(MyLanguageParser.T__1)
                self.state = 113
                self.conditionWithElse()
                self.state = 114
                self.match(MyLanguageParser.T__10)
                self.state = 115
                self.conditionWithElse()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(MyLanguageParser.T__11)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.type_()
                self.state = 120
                self.var_list(0)
                self.state = 121
                self.match(MyLanguageParser.T__11)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.match(MyLanguageParser.IDENTIFIER)
                self.state = 124
                self.match(MyLanguageParser.T__12)
                self.state = 125
                self.expression()
                self.state = 126
                self.match(MyLanguageParser.T__11)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 128
                self.match(MyLanguageParser.IDENTIFIER)
                self.state = 129
                self.match(MyLanguageParser.T__13)
                self.state = 130
                self.match(MyLanguageParser.T__11)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.match(MyLanguageParser.IDENTIFIER)
                self.state = 132
                self.match(MyLanguageParser.T__14)
                self.state = 133
                self.match(MyLanguageParser.T__11)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 134
                self.match(MyLanguageParser.T__15)
                self.state = 135
                self.match(MyLanguageParser.T__11)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 136
                self.match(MyLanguageParser.T__15)
                self.state = 137
                self.expression()
                self.state = 138
                self.match(MyLanguageParser.T__11)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 140
                self.loop_stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 141
                self.expression()
                self.state = 142
                self.match(MyLanguageParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionNoElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MyLanguageParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(MyLanguageParser.StatementContext,0)


        def conditionWithElse(self):
            return self.getTypedRuleContext(MyLanguageParser.ConditionWithElseContext,0)


        def conditionNoElse(self):
            return self.getTypedRuleContext(MyLanguageParser.ConditionNoElseContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_conditionNoElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionNoElse" ):
                listener.enterConditionNoElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionNoElse" ):
                listener.exitConditionNoElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionNoElse" ):
                return visitor.visitConditionNoElse(self)
            else:
                return visitor.visitChildren(self)




    def conditionNoElse(self):

        localctx = MyLanguageParser.ConditionNoElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_conditionNoElse)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(MyLanguageParser.T__9)
                self.state = 147
                self.match(MyLanguageParser.T__0)
                self.state = 148
                self.expression()
                self.state = 149
                self.match(MyLanguageParser.T__1)
                self.state = 150
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(MyLanguageParser.T__9)
                self.state = 153
                self.match(MyLanguageParser.T__0)
                self.state = 154
                self.expression()
                self.state = 155
                self.match(MyLanguageParser.T__1)
                self.state = 156
                self.conditionWithElse()
                self.state = 157
                self.match(MyLanguageParser.T__10)
                self.state = 158
                self.conditionNoElse()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MyLanguageParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(MyLanguageParser.StatementContext,0)


        def init_stmt(self):
            return self.getTypedRuleContext(MyLanguageParser.Init_stmtContext,0)


        def post_stmt(self):
            return self.getTypedRuleContext(MyLanguageParser.Post_stmtContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_loop_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_stmt" ):
                listener.enterLoop_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_stmt" ):
                listener.exitLoop_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_stmt" ):
                return visitor.visitLoop_stmt(self)
            else:
                return visitor.visitChildren(self)




    def loop_stmt(self):

        localctx = MyLanguageParser.Loop_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_loop_stmt)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(MyLanguageParser.T__16)
                self.state = 163
                self.expression()
                self.state = 164
                self.statement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(MyLanguageParser.T__17)
                self.state = 167
                self.statement()
                self.state = 168
                self.match(MyLanguageParser.T__18)
                self.state = 169
                self.expression()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 171
                self.match(MyLanguageParser.T__19)
                self.state = 172
                self.match(MyLanguageParser.T__0)
                self.state = 173
                self.init_stmt()
                self.state = 174
                self.match(MyLanguageParser.T__11)
                self.state = 175
                self.expression()
                self.state = 176
                self.match(MyLanguageParser.T__11)
                self.state = 177
                self.post_stmt()
                self.state = 178
                self.match(MyLanguageParser.T__1)
                self.state = 179
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MyLanguageParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(MyLanguageParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(MyLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_init_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_stmt" ):
                listener.enterInit_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_stmt" ):
                listener.exitInit_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_stmt" ):
                return visitor.visitInit_stmt(self)
            else:
                return visitor.visitChildren(self)




    def init_stmt(self):

        localctx = MyLanguageParser.Init_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_init_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.type_()
            self.state = 184
            self.match(MyLanguageParser.IDENTIFIER)
            self.state = 185
            self.match(MyLanguageParser.T__12)
            self.state = 186
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Post_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MyLanguageParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(MyLanguageParser.ExpressionContext,0)


        def empty(self):
            return self.getTypedRuleContext(MyLanguageParser.EmptyContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_post_stmt
